# option-helius

./: .env.example  .gitignore  DESIGN_REVIEW_REPORT.md  ENG_REVIEW_REPORT.md  ENG_REVIEW_REPORT_V2.md  IBKR_INTEGRATION_PLAN.md  PHASE2_PLAN.md  QA_REPORT.md  README.md  TODO.md  docker-compose.ibkr.yml  docker-compose.override.yml  docker-compose.yml  ralph-chain-prompt.md  ralph-design-review-prompt.md  ralph-design-review-v2-prompt.md  ralph-eng-review-prompt.md  ralph-eng-review-v2-prompt.md  ralph-macro-prompt.md  ralph-picks-prompt.md  ralph-qa-prompt.md  ralph-qa-v2-prompt.md  ralph-ui-prompt.md
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: cache.py  config.py  db.py  errors.py  logging.py  middleware.py  validation.py
backend/app/mock/: ai_analysis.py  macro.py  options_chain.py  picks.py  sentiment.py  social_sentiment.py  strategies.py
backend/app/models/: option.py  sentiment.py
backend/app/routers/: analyze.py  health.py  macro.py  notifications.py  options.py  picks.py  report.py  scanner.py  sentiment.py  strategies.py
backend/app/services/: alphavantage.py  db_schema.py  flashalpha.py  indicator_refresh.py  (+18 more)
backend/tests/: test_api_validation_and_limits.py  test_app_lifespan.py  test_cache_lifecycle.py  test_core_page_integration.py  test_db_pool.py  test_health_ibkr.py  test_ibkr_client.py  test_ibkr_config.py  test_ibkr_fetcher.py  test_ibkr_integration.py  test_ibkr_mock.py  test_ibkr_schemas.py  test_main_ibkr_lifecycle.py  test_market_data_ibkr.py  test_options_router_ibkr.py
(+88 files in other folders)
